@@ -7,7 +7,7 @@ describe DataMapper::Adapters::Sql::Commands::LoadCommand do
   it "should return a Struct for custom queries" do
     results = database.query("SELECT * FROM zoos WHERE name = ?", 'Galveston')
     zoo = results.first
-    zoo.class.superclass.should == Struct
+    zoo.class.superclass.should == DataMapper::Support::Struct
     zoo.name.should == "Galveston"
   end
   
@@ -41,4 +41,4 @@ describe DataMapper::Adapters::Sql::Commands::AdvancedLoadCommand do
     EOS
   end
   
-end
+end if ENV['ADAPTER'].nil? || ENV['ADAPTER'] == 'mysql'
